--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</li>
 					<li class="divider"></li>
 					<li><a class="clicker" href="#totals17" data-toggle="collapse">Grand Totals</a></li>
-					<li><a class="disabled" href="#breakdown1617" data-toggle="collapse">Spending Breakdown</a></li>
+					<!--li><a class="disabled" href="#breakdown1617" data-toggle="collapse">Spending Breakdown</a></li-->
 				</ul>
 			  </li>
 			  
