added hebrew bsd

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				  <li><a href="#">Travel and Miscellaneous Totals</a></li>
 				  <li><a href="#">Grand Totals</a></li>
 				</ul>
-			</li><p class="navbar-text" style="text-indent: 490px;">BS"D</p>
+			</li><p class="navbar-text" style="text-indent: 490px;">בס"ד</p>
 			</ul>
 		  </div>
 		</nav>
